# fast-htmx-app

./: .gitignore  Dockerfile  README.md  pyproject.toml  sample.env  tailwind.config.js
app/: constants.py  db.py  main.py  models.py  schemas.py  tailwind.py  user_models.py
app/auth/: __init__.py  auth.py  tokens.py
app/routers/: __init__.py  auth_routes.py  files_routes.py  login_routes.py  user_routes.py
static/: dropzone.css  tailwind.css
templates/: htmx-upload.html  index.html  login.html  oauth.html  profile.html  upload.html
templates/partials/: links.html  logout.html  meta.html
tests/: constants_test.py  fruitname_test.py  githubUser_test.py  googleUser_test.py  health_test.py  microsoftUser_test.py
utils/: __init__.py  fruits.py  names.py  utils.py
