[project]
name = "fast-htmx-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py", "utils/**/*.py"]

[tool.taskipy.tasks]
test = "uv run pytest"
dev = "uv run uvicorn app.main:app --reload --reload-include '**/*.html' --reload-include '**/*.css'"
start = "uv run uvicorn app.main:app"
buildcss = "./tailwindcss -o static/tailwind.css"
lint = "uv run ruff check"
